Fixed Molt text not wrapping properly

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -395,8 +395,11 @@ div.mini-molt:hover {
     position: absolute;
     top: 0;
 }
+.mini-molt-text-box {
+    overflow: hidden;
+}
 .mini-molt-content {
-    overflow-wrap: anywhere;
+    overflow-wrap: break-word;
 }
 .mini-molt-crop-square {
     /* Constant aspect ratio hack */
